--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@
 <li><a class='nn' href='3JN01.htm'>3 John</a></li>
 <li><a class='nn' href='JUD01.htm'>Jude</a></li>
 <li><a class='nn' href='REV01.htm'>Revelation</a></li>
-<li><a href='copyright.htm'>Public Domain</a></li>
+<li><a href="copyright.htm" target="_blank" rel="noopener noreferrer">Public Domain</a></li>
 </ul></div>
 <div class="mainindex">
 <div class="toc"><a href="GEN01.htm">Go!</a></div>
