--- a/HAG02.htm
+++ b/HAG02.htm
@@ -30,7 +30,7 @@
 <hr />
 </div>
 <div class="copyright">
-You may copy the King James Version of the Holy Bible freely. If you find a typo that is not just an archaic spelling, <a href="http://eBible.org/cgi-bin/comment.cgi">please report it</a>.
-<p align="center"><a href='copyright.htm'>Public Domain</a></p>
+You may copy the King James Version of the Holy Bible freely. 
+<p align="center"><a href="copyright.htm" target="_blank" rel="noopener noreferrer">Public Domain</a></p>
 </div>
 </div></body></html>
